--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -63,7 +63,7 @@
                       </div>
                     </div>
 
-                    <div class="matchs-info">
+                    <div class="matchs-info d-none">
                       <button (click)="onShowMatches()" class="matchBtn btn btn-sm btn-light"><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
                       <button (click)="onShowMissing()" class="missBtn btn btn-sm btn-light"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
                       <button (click)="onShowMore()" class="moreBtn btn btn-sm btn-light"><img src="assets/images/info-icon.png"  width="16px">More Skills </button>
@@ -119,7 +119,7 @@
                             {{sharedService.onFindDomainFromSingleID(item)?.name}}
                           </span>
                         </ng-container> -->
-                        <ng-container  *ngFor="let item of userInfo?.domains_worked; let first = first;">
+                        <ng-container  *ngFor="let item of matchingJob?.jobs?.domain; let first = first;">
                           <span class="matchTxt text-capitalize" *ngIf="missingElement && onChangeStringNumber('domains_worked', 'domain', item, 'close').type == 'close'">
                             <i  class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
                             {{sharedService.onFindDomainFromSingleID(item)?.name}}
@@ -149,9 +149,9 @@
                           </div>
                         </ng-container> -->
 
-                        <ng-container *ngFor="let item of userInfo?.hands_on_experience; let i = index; let first = first;">
+                        <ng-container *ngFor="let item of matchingJob?.jobs?.hands_on_experience; let i = index; let first = first;">
                           <div class="text-center border-right pr-3"
-                            *ngIf="missingElement && onChangeObj('hands_on_experience', 'hands_on_experience', item, 'info', 'skill_id').type == 'info'">
+                            *ngIf="missingElement && onChangeObj('hands_on_experience', 'hands_on_experience', item, 'close', 'skill_id').type == 'close'">
                               {{utilsHelperService.onSplitTag(item.skill_name)}}
                               <br>
                             <i class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
@@ -188,10 +188,10 @@
 
                             </span>
                           </ng-container> -->
-
-                          <ng-container *ngFor="let item of utilsHelperService.differenceByPropValArray(userInfo?.skills, userInfo?.hands_on_experience, 'skill_id'); let first = first;">
+<!-- {{utilsHelperService.differenceByPropValArray(matchingJob?.jobs?.skills, matchingJob?.jobs?.hands_on_experience, 'skill_id') | json}} -->
+                          <ng-container *ngFor="let item of utilsHelperService.differenceByPropValArray(matchingJob?.jobs?.skills, matchingJob?.jobs?.hands_on_experience, 'skill_id'); let first = first;">
                             <span
-                              *ngIf="missingElement && onChangeStringNumber('skills', 'skills', item, 'info').type == 'info'">
+                              *ngIf="missingElement && onChangeStringNumber('skills', 'skills', item, 'close').type == 'close'">
                               <i class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
                               {{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag)}}
 
@@ -220,9 +220,9 @@
                           </span>
                         </ng-container> -->
 
-                        <ng-container *ngFor="let item of userInfo?.programming_skills; let i = index; let first = first;">
+                        <ng-container *ngFor="let item of matchingJob?.jobs?.programming_skills; let i = index; let first = first;">
                           <span
-                            *ngIf="missingElement && onChangeStringNumber('programming_skills', 'programming_skills', item, 'info', true).type == 'info'">
+                            *ngIf="missingElement && onChangeStringNumber('programming_skills', 'programming_skills', item, 'close', true).type == 'close'">
                             <i class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': i != 1}"></i>
                             {{item}}
                           </span>
@@ -246,9 +246,9 @@
                           </span>
                         </ng-container> -->
 
-                        <ng-container *ngFor="let item of userInfo?.other_skills; let i = index; let first = first;">
+                        <ng-container *ngFor="let item of matchingJob?.jobs?.optinal_skills; let i = index; let first = first;">
                           <span
-                            *ngIf="missingElement && onChangeStringNumber('other_skills', 'optinal_skills', item, 'info', true).type == 'info'">
+                            *ngIf="missingElement && onChangeStringNumber('other_skills', 'optinal_skills', item, 'close', true).type == 'close'">
                             <i class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': i != 1}"></i>
                             {{item}}
                           </span>
@@ -272,9 +272,9 @@
                           </span>
                         </ng-container> -->
 
-                        <ng-container *ngFor="let item of userInfo?.certification; let first = first;">
+                        <ng-container *ngFor="let item of matchingJob?.jobs?.certification; let first = first;">
                           <span
-                            *ngIf="missingElement && onChangeStringNumber('certification', 'certification', item, 'info', true).type == 'info'">
+                            *ngIf="missingElement && onChangeStringNumber('certification', 'certification', item, 'close', true).type == 'close'">
                             <i class="fa fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
                             {{item}}
                           </span>
@@ -406,7 +406,7 @@
                       </div>
                     </div>
 
-                    <div class="matchs-info">
+                    <div class="matchs-info d-none">
                       <button (click)="onShowMatches()" class="matchBtn btn btn-sm btn-light"><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
                       <button (click)="onShowMissing()" class="missBtn btn btn-sm btn-light"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
                       <button (click)="onShowMore()" class="moreBtn btn btn-sm btn-light"><img src="assets/images/info-icon.png"  width="16px">More Skills </button>
@@ -462,7 +462,7 @@
                             {{sharedService.onFindDomainFromSingleID(item)?.name}}
                           </span>
                         </ng-container> -->
-                        <ng-container  *ngFor="let item of userInfo?.domains_worked; let first = first;">
+                        <ng-container  *ngFor="let item of matchingJob?.jobs?.domain; let first = first;">
                           <span class="matchTxt text-capitalize" *ngIf="missingElement && onChangeStringNumber('domains_worked', 'domain', item, 'close').type == 'close'">
                             <i  class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
                             {{sharedService.onFindDomainFromSingleID(item)?.name}}
@@ -492,9 +492,9 @@
                           </div>
                         </ng-container> -->
 
-                        <ng-container *ngFor="let item of userInfo?.hands_on_experience; let i = index; let first = first;">
+                        <ng-container *ngFor="let item of matchingJob?.jobs?.hands_on_experience; let i = index; let first = first;">
                           <div class="text-center border-right pr-3"
-                            *ngIf="missingElement && onChangeObj('hands_on_experience', 'hands_on_experience', item, 'info', 'skill_id').type == 'info'">
+                            *ngIf="missingElement && onChangeObj('hands_on_experience', 'hands_on_experience', item, 'close', 'skill_id').type == 'close'">
                               {{utilsHelperService.onSplitTag(item.skill_name)}}
                               <br>
                             <i class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
@@ -532,9 +532,9 @@
                             </span>
                           </ng-container> -->
 
-                          <ng-container *ngFor="let item of utilsHelperService.differenceByPropValArray(userInfo?.skills, userInfo?.hands_on_experience, 'skill_id'); let first = first;">
+                          <ng-container *ngFor="let item of utilsHelperService.differenceByPropValArray(matchingJob?.jobs?.skills, matchingJob?.jobs?.hands_on_experience, 'skill_id'); let first = first;">
                             <span
-                              *ngIf="missingElement && onChangeStringNumber('skills', 'skills', item, 'info').type == 'info'">
+                              *ngIf="missingElement && onChangeStringNumber('skills', 'skills', item, 'close').type == 'close'">
                               <i class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
                               {{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag)}}
 
@@ -563,7 +563,7 @@
                           </span>
                         </ng-container> -->
 
-                        <ng-container *ngFor="let item of userInfo?.programming_skills; let i = index; let first = first;">
+                        <ng-container *ngFor="let item of matchingJob?.jobs?.programming_skills; let i = index; let first = first;">
                           <span
                             *ngIf="missingElement && onChangeStringNumber('programming_skills', 'programming_skills', item, 'info', true).type == 'info'">
                             <i class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': i != 1}"></i>
@@ -589,9 +589,9 @@
                           </span>
                         </ng-container> -->
 
-                        <ng-container *ngFor="let item of userInfo?.other_skills; let i = index; let first = first;">
+                        <ng-container *ngFor="let item of matchingJob?.jobs?.optinal_skills; let i = index; let first = first;">
                           <span
-                            *ngIf="missingElement && onChangeStringNumber('other_skills', 'optinal_skills', item, 'info', true).type == 'info'">
+                            *ngIf="missingElement && onChangeStringNumber('other_skills', 'optinal_skills', item, 'close', true).type == 'close'">
                             <i class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': i != 1}"></i>
                             {{item}}
                           </span>
@@ -615,9 +615,9 @@
                           </span>
                         </ng-container> -->
 
-                        <ng-container *ngFor="let item of userInfo?.certification; let first = first;">
+                        <ng-container *ngFor="let item of matchingJob?.jobs?.certification; let first = first;">
                           <span
-                            *ngIf="missingElement && onChangeStringNumber('certification', 'certification', item, 'info', true).type == 'info'">
+                            *ngIf="missingElement && onChangeStringNumber('certification', 'certification', item, 'close', true).type == 'close'">
                             <i class="fa fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
                             {{item}}
                           </span>
