Issue Fixed: https://app.clickup.com/t/2hdgc2

--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
@@ -25,23 +25,23 @@
           <div class="tab-content" [@animSlider]="slidingCounter">
 
             <app-create-candidate-personal-details
-            [userDetails]="userDetails"
+            [userDetails]="userInfo"
             *ngIf="currentTabInfo.tabNumber == 1"
               [currentTabInfo]="currentTabInfo">
             </app-create-candidate-personal-details>
 
             <app-create-candidate-education-exp
-            [userDetails]="userDetails"
+            [userDetails]="userInfo"
             *ngIf="currentTabInfo.tabNumber == 2" [currentTabInfo]="currentTabInfo">
             </app-create-candidate-education-exp>
 
             <app-create-candidate-skillset
-            [userDetails]="userDetails"
+            [userDetails]="userInfo"
             *ngIf="currentTabInfo.tabNumber == 3" [currentTabInfo]="currentTabInfo">
             </app-create-candidate-skillset>
 
             <app-create-candidate-job-preference
-            [userDetails]="userDetails"
+            [userDetails]="userInfo"
             *ngIf="currentTabInfo.tabNumber == 4"
               [currentTabInfo]="currentTabInfo">
             </app-create-candidate-job-preference>
@@ -49,7 +49,7 @@
           </div>
 
           <app-create-candidate-footer
-          [userDetails]="userDetails"
+          [userDetails]="userInfo"
           (postJcreateCandidateob)="createCandidate()"
           [createCandidateForm]="candidateForm"
           (onEnableJobPreviewModal)="onToggleRegisterReview($event)"
@@ -58,7 +58,7 @@
           </app-create-candidate-footer>
 
           <app-candidate-review-modal
-          [userDetails]="userDetails"
+          [userDetails]="userInfo"
           (createCandidate)="createCandidate()"
           *ngIf="isOpenedRegisterReviewModal"
           [toggleRegisterReviewModal]="isOpenedRegisterReviewModal"
