--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -82,7 +82,7 @@
 												<i class="fas fa-paper-plane"></i> Send Mail</a>
 											</span>
                     </div>
-                    <div [ngClass]="{'active': savedProfiles?.includes(item?.id)}" (click)="onSaveProfile(item)" class="save-icon" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
+                    <div [ngClass]="{'active': (savedProfiles?.includes(item?.id) || item?.is_saved_profile)}" (click)="onSaveProfile(item)" class="save-icon" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
                   </div>
                   <div class="media">
                     <img *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0)" [src]="item?.photo ? userMeta?.photo?.path+'/'+ userMeta?.photo?.folder+'/'+userMeta?.photo?.sizes?.medium+'/'+item?.photo+'?v='+ randomNum : 'assets/images/user-img-icon.jpg'">
